objects/TechDepotSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To allow auto assignment of Tech opportunity owner</description>
        <label>Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crypto_Key__c</fullName>
        <label>Crypto Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_User__c</fullName>
        <description>Set the default opportunity owner</description>
        <label>Default User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <description>To query on the User title</description>
        <label>User_Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Tech Depot Setting</label>
</CustomObject>